<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/llayoutForTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/layout_for_title"/>

        <LinearLayout
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1">


            <LinearLayout
                android:id="@+id/btnJoin01"
                android:layout_marginTop="35dp"
                android:paddingLeft="18.66dp"
                android:paddingRight="18.33dp"
                android:background="@drawable/box_off_01"
                android:layout_width="match_parent"
                android:layout_height="77.33dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/join_step_01_title_01"
                        android:textSize="16sp"
                        android:textColor="@color/color_text_08"/>

                    <TextView
                        android:textColor="@color/color_text_03"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12.66dp"
                        android:textSize="12sp"
                        android:text="@string/join_step_01_desc_01"/>

                </LinearLayout>

                <ImageView
                    android:background="@drawable/check_default"
                    android:id="@+id/ivCheck01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnJoin02"
                android:layout_marginTop="16.66dp"
                android:paddingLeft="18.66dp"
                android:paddingRight="18.66dp"
                android:background="@drawable/box_off_01"
                android:layout_width="match_parent"
                android:layout_height="77.33dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/join_step_01_title_02"
                        android:textSize="16sp"
                        android:textColor="@color/color_text_08"/>

                    <TextView
                        android:textColor="@color/color_text_03"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12.66dp"
                        android:textSize="12sp"
                        android:text="@string/join_step_01_desc_02"/>

                </LinearLayout>

                <ImageView
                    android:background="@drawable/check_default"
                    android:id="@+id/ivCheck02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnOk"
            android:layout_width="match_parent"
            android:layout_height="50.66dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_02"
            android:text="@string/button_title_04"
            android:textColor="@color/color_btn_title"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>