<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    tools:context=".main.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <LinearLayout
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1">

            <ImageView
                android:background="@drawable/login_logo"
                android:layout_marginTop="76.66dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_marginTop="17dp"
                android:textSize="15dp"
                android:text="아동복의 모든것! 도매프랜즈와 함께!"
                android:gravity="center"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_marginTop="43.33dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/edtId"
                android:padding="15dp"
                android:lines="1"
                android:textSize="13dp"
                android:textColor="@color/color_input_01"
                android:textColorHint="@color/hint_input_01"
                android:maxLength="10"
                android:hint="@string/hint_id"
                android:background="@drawable/input_box_off_01"/>


            <EditText
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/edtPwd"
                android:padding="15dp"
                android:lines="1"
                android:maxLength="10"
                android:textSize="13dp"
                android:textColor="@color/color_input_01"
                android:textColorHint="@color/hint_input_01"
                android:hint="@string/hint_pwd"
                android:background="@drawable/input_box_off_01"/>

            <Button
                android:stateListAnimator="@null"
                android:id="@+id/btnOk"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_btn"/>

            <LinearLayout
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:stateListAnimator="@null"
                    android:paddingRight="20dp"
                    android:id="@+id/btnJoin"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="30dp"
                    android:textSize="12dp"
                    android:textColor="@color/btn__text_color_01"
                    android:text="@string/button_title_02"
                    android:background="@color/color_translate"/>

               <LinearLayout

                   android:visibility="gone"
                   android:layout_width="0dp"
                   android:layout_weight="1.5"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">
                   <ImageView
                       android:layout_width="1dp"
                       android:layout_height="11.33dp"
                       android:background="@color/line_color_01"/>
                   <Button
                       android:stateListAnimator="@null"
                       android:paddingLeft="20dp"
                       android:id="@+id/btnKindPwd"
                       android:gravity="left|center_vertical"
                       android:layout_width="0dp"
                       android:layout_weight="1.5"
                       android:layout_height="30dp"
                       android:textSize="12dp"
                       android:textColor="@color/btn__text_color_01"
                       android:text="@string/button_title_03"
                       android:background="@color/color_translate"/>
               </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="10dp"
            android:textColor="@color/color_text_01"
            android:text="@string/coprite_title"
            android:layout_marginBottom="40dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>