<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/llayoutForTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/layout_for_title"/>

        <LinearLayout
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/join_step_03_title_01"
                android:textColor="@color/color_text_08"
                android:layout_marginTop="35dp"

                android:textSize="16sp"/>

            <LinearLayout

                android:layout_marginTop="14dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:textColor="@color/color_text_04"
                        android:textSize="12dp"
                        android:text="잠깐! 호수가 여러개인 매장은 "
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:textColor="@color/color_text_08"
                        android:textSize="12dp"
                        android:text="제일 작은 숫자의 호수만"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:textColor="@color/color_text_04"
                        android:textSize="12dp"
                        android:text="선택해주세요. 예:A23,24,25 → "
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:textColor="@color/color_text_08"
                        android:textSize="12dp"
                        android:text="A23선택"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:textColor="@color/color_text_04"
                        android:textSize="12dp"
                        android:text="가열 15호, 16호, 나열10호 → "
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:textColor="@color/color_text_08"
                        android:textSize="12dp"
                        android:text="가열 15호만 선택"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnJoin01"
                android:layout_marginTop="21.33dp"
                android:paddingLeft="18.66dp"
                android:paddingRight="18.66dp"
                android:background="@drawable/box_off_01"
                android:layout_width="match_parent"
                android:layout_height="77.33dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:background="@drawable/icon_stor"
                    android:id="@+id/ivType01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
               <LinearLayout
                   android:layout_marginLeft="20dp"
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="wrap_content"
                   android:orientation="vertical">
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/join_step_03_title_02"
                       android:textSize="16sp"
                       android:textColor="@color/color_text_08"/>

                   <TextView

                       android:id="@+id/tvStore01"
                       android:layout_marginTop="10dp"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/join_step_03_msg2"
                       android:textSize="12sp"
                       android:textColor="@color/color_text_03"/>
               </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnJoin02"
                android:layout_marginTop="15.33dp"
                android:paddingLeft="18.66dp"
                android:paddingRight="18.66dp"
                android:background="@drawable/box_off_01"
                android:layout_width="match_parent"
                android:layout_height="77.33dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:background="@drawable/icon_floor"
                    android:id="@+id/ivType02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_marginLeft="20dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/join_step_03_title_03"
                        android:textSize="16sp"
                        android:textColor="@color/color_text_08"/>

                    <TextView

                        android:id="@+id/tvStore02"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/join_step_03_msg3"
                        android:textSize="12sp"
                        android:textColor="@color/color_text_03"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnJoin03"
                android:layout_marginTop="15.33dp"
                android:paddingLeft="18.66dp"
                android:paddingRight="18.66dp"
                android:background="@drawable/box_off_01"
                android:layout_width="match_parent"
                android:layout_height="77.33dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:background="@drawable/icon_numbaer"
                    android:id="@+id/ivType03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_marginLeft="20dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/join_step_03_title_04"
                        android:textSize="16sp"
                        android:textColor="@color/color_text_08"/>

                    <TextView

                        android:id="@+id/tvStore03"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/join_step_03_msg4"
                        android:textSize="12sp"
                        android:textColor="@color/color_text_03"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnOk"
            android:layout_width="match_parent"
            android:layout_height="50.66dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_02"
            android:text="@string/button_title_04"
            android:textColor="@color/color_btn_title"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>